[tool.poetry]
name = "saborexpress"
version = "0.1.0"
description = "Your tasteful food delivery app"
authors = ["datalastix <datalastix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
